[package]
name = "shotgun"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", features = ["cookies"] }
clap = "2.33.3"
url = "2.2.2"
urlencoding = "2.1.0"
